# agent_manage

./: .gitignore  AGENTS.md  CHANGELOG.md  COMMANDS.md  COMMANDS_Deprecated.md  PRODUCT_NOTES.md  README.md  README_Deprecated.md  README_V2.md  pyproject.toml
agent_manage/: __init__.py  cli.py  local.py  models.py  orchestrator.py  response.py
agent_manage_v2/: cli.py  models.py  orchestrator.py
openclaw_remote/: cli.py  local.py
openclaw_remote_Deprecated/: __init__.py  cli.py  models.py  orchestrator.py
scripts/: agentctl.py  agentctl_Deprecated.py  agentctl_v2.py
tests/: test_cli_responses.py  test_create_instance_v2.py  test_manager.py  test_manager_Deprecated.py
