[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-remote"
version = "0.3.0"
description = "Local agent management script for OpenClaw servers."
requires-python = ">=3.9"

[project.scripts]
openclaw-remote = "openclaw_remote.cli:main"
agent-manage-v2 = "agent_manage_v2.cli:main"
